--- a/YuYuYu/partials/grid.scss
+++ b/YuYuYu/partials/grid.scss
@@ -73,8 +73,7 @@ body {
       "footer";
     & > .side {
       margin-left: 0;
-
-
+      margin-bottom: 16px;
     }
   }
 }
