--- a/YuYuYu/partials/header/design.scss
+++ b/YuYuYu/partials/header/design.scss
@@ -83,10 +83,10 @@ body.listing-page > .content {
   display: block;
 }
 #header .tabmenu li a {
-  padding: 8px;
+  padding: 8px 6px;
 }
 #header .tabmenu li.selected a {
-  padding: 8px 8px 6px;
+  padding: 8px 6px 6px;
 }
 #header .tabmenu li a,
 .pagename a {
